--- a/jogomemoria/css/jogo.css
+++ b/jogomemoria/css/jogo.css
@@ -1,8 +1,9 @@
+
 main{
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-image: url('../imagens/Madruga.jpg');
+    background-image: url('https://blog.mag.com.br/wp-content/uploads/2024/09/seguro-para-jogador-de-futebol.jpg');
     min-height: 100vh;
     align-items: center;
     justify-content: center;
@@ -15,7 +16,7 @@ header{
     justify-content: space-between;
     background-color: rgba(255,255,255, 0.8);
     width: 100%;
-    max-width: 800px;
+    max-width: 900px;
     padding: 30px;
     margin: 0 0 30px;
     border-radius: 5px;
@@ -43,16 +44,15 @@ header{
     position: absolute;
     background-size: cover;
     background-position: center;
-    border: 2px solid blue;
+    border: 2px solid rgb(255, 0, 0);
     border-radius: 5px;
     transition: all 400ms ease;
 }
 .frente {
-    
     transform: rotateY(180deg);
 }
 .costas {
-    background-image: url('../imagens/passaro.jpg');
+    background-image: url('../imagens/figurinha.jpg');
     backface-visibility: hidden;
 }
 .revelarCarta {
@@ -66,9 +66,13 @@ header{
 .revelarspan{
     display: block;
 }
-.spanbotaoreiniciar{
+.spanbotoes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px
 }
-.botaoreiniciarjogo{
+.botaojogo{
     background-color: #ee665c;
     border-radius: 8px;
     color: white;
@@ -76,27 +80,13 @@ header{
     font-size: 1em;
     font-weight: bold;
     max-width: 300px;
-    min-width: 100px;
+    min-width: 200px;
     padding: 15px;
     text-transform: uppercase;
     width: 100%;
+    height: 60px;
 }
 .divs{
     display: flex;
     height: 1000px;
-    gap: 100px;
-}
-.ranking{
-    background-color: #ccc;
-    color: black;
-    min-height: 200px;
-    border-radius: 6px;
-    height: auto;
-}
-.div1ranking{
-    text-align: center;
-}
-.div2ranking{
-    text-align: left;
-    padding-left: 20px;
 }
